--- a/userbackend/requirements.txt
+++ b/userbackend/requirements.txt
@@ -1,6 +1,7 @@
 # --- Flask Backend ---
 flask==3.0.0
 python-dotenv==1.0.1
+flask-cors==4.0.0
 langchain-community
 langchain-text-splitters
 langchain-openai
