--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,7 +3,7 @@ flask==3.0.0
 flask-cors==4.0.0
 python-dotenv==1.0.1
 sqlalchemy==2.0.29
-
+openai
 # --- MySQL ---
 mysql-connector-python==8.3.0
 
