--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,13 @@
 services:
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    restart: unless-stopped
+
+
   db:
     image: mysql:8
     container_name: mysql_poc
@@ -71,6 +80,15 @@ services:
     volumes:
       - ./userbackend:/app/userbackend
       - ./uploads:/app/uploads
+    
+  prophet:
+    build:
+      context: .
+      dockerfile: prophet.Dockerfile
+    container_name: prophet
+    restart: always
+    ports:
+      - "5001:5001"
 
 volumes:
   db_data:
