--- a/nginx.conf
+++ b/nginx.conf
@@ -3,11 +3,30 @@ events {}
 http {
     server {
         listen 80;
-        server_name wizzgeeks.com;
+        # server_name apexcise.wizzgeeks.com;
+        # server_name localhost;
 
         # Proxy for main app
+        location /prophet/ {
+            proxy_pass http://prophet:5001;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /chat/ {
+            proxy_pass http://userquery:5005;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
         location / {
-            proxy_pass http://app:5000;
+            proxy_pass http://backend:5002;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
