--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ events {}
 http {
     server {
         listen 80;
-        # server_name apexcise.wizzgeeks.com;
+        server_name apexcise.wizzgeeks.com;
         # server_name localhost;
 
         # Proxy for main app
